done until task 7 included