@@ -8,7 +8,7 @@ public class ShowcaseJava8 {
 
     public static void main(String[] args) {
         // using a 'lambda function' to express a functional strategy
-        final Comparator<Integer> comparator = (a, b) -> a - b;
+        final Comparator<Integer> comparator = Comparator.comparingInt(a -> a);
         final Set<Integer> set = new TreeSet<>(comparator);
         set.addAll(Arrays.asList(10, 20, 30, 40, 5, 6, 7, 60, 70));
         System.out.println(set);
@@ -22,15 +22,15 @@ public class ShowcaseJava8 {
         // simulating large-scale data processing with parallel streams
         final List<Double> l = IntStream.range(0, 10000000)
                 .mapToObj(x -> Math.random())
-                .collect(toList());
+                .toList();
         // sequential
         long time = System.currentTimeMillis();
-        System.out.println(l.stream().reduce((a,b)->Math.max(a,b)));
+        System.out.println(l.stream().reduce(Math::max));
         time = System.currentTimeMillis() - time;
         System.out.println("Time: " + time);
         // parallel
         long time2 = System.currentTimeMillis();
-        System.out.println(l.stream().parallel().reduce((a,b)->Math.max(a,b)));
+        System.out.println(l.stream().parallel().reduce(Math::max));
         time2 = System.currentTimeMillis() - time2;
         System.out.println("Time2: " + time2);
         System.out.println("Gain: " + (((double)time)/time2));
